--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>MY FIRST REPOSITORY HOSTING LIVE</h1>
+    <h1 style="color: aquamarine;">MY FIRST REPOSITORY HOSTING LIVE</h1>
     
 </body>
 </html>
